[package]
name = "rest-discovery"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
convert_case = "0.5.0"
genco = "0.17.2"
indexmap = { version = "1.9.1", features = ["serde"] }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "json", "native-tls", "rustls-tls", "stream"] }
path-aware-serde = { path = "../path-aware-serde" }
serde = { workspace = true, features = ["alloc", "derive", "rc"] }
timestamp = { path = "../timestamp" }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { workspace = true, features = ["full"] }
phf = { version = "0.11.1", features = ["macros"] }
typed-builder = "0.10.0"
